clusters/prod/monitoring/grafana/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-rancher-thux-dev
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.lab-thux.it`)
      kind: Rule
      services:
        - name: grafana
          port: 80
